--- a/frontend/src/main/webapp/WEB-INF/templates/users/list.html
+++ b/frontend/src/main/webapp/WEB-INF/templates/users/list.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="stylesheet" href="../../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}"/>
+    <link rel="stylesheet" href="../../../static/node_modules/bootstrap/dist/css/bootstrap.css"
+          th:href="@{/css/bootstrap.min.css}"/>
 </head>
 <body>
 <div class="container-fluid">
@@ -36,18 +37,16 @@
                         <span th:unless="${user.enabled}" class="label label-warning hidden"
                               th:class="${'label label-warning'}">disabled</span>
                     </td>
-
-                    <!--<td>-->
-                        <!--<span class="label label-default"-->
-                              <!--th:class="${user.enabled ? 'label label-default' : 'label label-warning'}"-->
-                              <!--th:text="${user.enabled? 'enabled' : 'disabled'}">enabled</span>-->
-                    <!--</td>-->
+                    <!--TODO: заменить список на bootstrap-select элемент с нередактируемыми полями-->
                     <td th:text="${user.roles.![authority]}">[ROLE_ADMIN, ROLE_USER]</td>
                     <td class="text-right">
-                        <button class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Изменить</button>
+                        <button class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Изменить
+                        </button>
                         <!-- Trigger the modal with a button -->
-                        <button type="button" class="btn btn-sm btn-danger btn-delete" data-toggle="modal" data-target="#deleteModal" th:user-id="${user.id}" th:user-login="${user.login}"><i
-                                class="glyphicon glyphicon-remove"></i> Удалить</button>
+                        <button type="button" class="btn btn-sm btn-danger btn-delete" data-toggle="modal"
+                                data-target="#deleteModal" th:user-id="${user.id}" th:user-login="${user.login}"><i
+                                class="glyphicon glyphicon-remove"></i> Удалить
+                        </button>
                     </td>
                 </tr>
                 <tr>
@@ -85,8 +84,8 @@
     </div>
 </div>
 
-<script src="../../../static/js/jquery3.1.1.js" th:src="@{/js/jquery3.1.1.js}"></script>
-<script src="../../../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}"></script>
+<script src="../../../static/node_modules/jquery/dist/jquery.js" th:src="@{/js/jquery.min.js}"></script>
+<script src="../../../static/node_modules/bootstrap/dist/js/bootstrap.js" th:src="@{/js/bootstrap.min.js}"></script>
 <script>
     var selectRow = function () {
         $(this).addClass('info');
@@ -112,6 +111,5 @@
             });
         });
     });
-
 </script>
 </body>
